# fafnir

./: .gitignore  CMakeLists.txt  Fafnir.Reification.1.2.1.nuspec  Fafnir.Reification.nuspec  create_packages.sh  install.bat  uninstall.bat
assets/: Toolset.props  Toolset.targets
assets/clang/: Toolset.props
assets/clang-cl/: Toolset.props
chocolatey_tools/: install.ps1  uninstall.ps1
scripts/: install.ps1  install_command.ps1
src/: CMakeLists.txt  custom_api.cpp  custom_api.hpp  dll_main.cpp  fafnir.hpp  main.cpp
tools/: install.ps1  uninstall.ps1
